--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zabir-portfolio1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>zabir-portfolio1</h1>
+    <section class="image">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="color">Zabir Hossain's</span> Website*</h1>
+            <h4>A little developer</h4>
+            <p>I am in the learning stage for developing website. Its a chalange for me to make a website. I want to be
+                a
+                good web developer in future insa-allah. I work hard daily & programming hero is very good to learn.
+            </p>
+            <a class="button" href="https://www.facebook.com/zabir.44" target="blank">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/zabirpic.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
