--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
                 a
                 good web developer in future insa-allah. I work hard daily & programming hero is very good to learn.
             </p>
-            <a class="button" href="https://www.facebook.com/zabir.44" target="blank">Hire me</a>
+            <a class="button" href="https://www.facebook.com/zabir.44" target="_blank">Hire me</a>
         </div>
         <div class="half-width">
             <img src="images/zabirpic.png" alt="">
+        </div>
+    </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/zabir2pic.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h4>Become a high web developer</h4>
+            <p>I know basic HTML & CSS. Now I can make a simple website but not so good.My dream is to make 3
+                diffrentwebsite & become a good web developer.
+            </p>
+            <a class="button" href="https://www.facebook.com/zabir.44" target="_blank">Download Resume</a>
         </div>
     </section>
 </body>
