--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="image">
+    <section class="image flexibility">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1> <span class="color">Zabir Hossain's</span> Website*</h1>
@@ -28,17 +28,32 @@
             <img src="images/zabirpic.png" alt="">
         </div>
     </section>
-    <section class="dream">
+    <section class="dream flexibility ">
         <div class="half-width">
             <img src="images/zabir2pic.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
             <h4>Become a high web developer</h4>
-            <p>I know basic HTML & CSS. Now I can make a simple website but not so good.My dream is to make 3
+            <p>I know basic HTML & CSS. Now I can make a simple website but not so good. My dream is to make 3
                 diffrentwebsite & become a good web developer.
             </p>
             <a class="button" href="https://www.facebook.com/zabir.44" target="_blank">Download Resume</a>
+        </div>
+    </section>
+    <h1>Experiancs</h1>
+    <section class="flexibility experiances">
+        <div class="Eitems">
+            <h2>Full Stack Developer</h2>
+            <h4>2021-Present | Pro level Developer</h4>
+            <p>I am the master of HTML,CSS & Java script.I know everything neeed to make a beautiful website.I also
+                know the server & security.I can give you 100% web solution. </p>
+        </div>
+        <div class="Eitems">
+            <h2>Baby Web Developer</h2>
+            <h4>2020-2021 | Programming hero learner</h4>
+            <p>I have no job. So I decided to learn web developing in Preogramming hero .It is so sweet to learn
+                with fun.I love this site very much .Because I learn HTML,CSS , Java stript & so on. </p>
         </div>
     </section>
 </body>
