--- a/index.html
+++ b/index.html
@@ -43,19 +43,24 @@
     </section>
     <h1>Experiancs</h1>
     <section class="flexibility experiances">
-        <div class="Eitems">
+        <div class="Eitems" id="border1">
             <h2>Full Stack Developer</h2>
-            <h4>2021-Present | Pro level Developer</h4>
+            <h4 class="color">2021-Present | Pro level Developer</h4>
             <p>I am the master of HTML,CSS & Java script.I know everything neeed to make a beautiful website.I also
                 know the server & security.I can give you 100% web solution. </p>
         </div>
-        <div class="Eitems">
+        <div class="Eitems" id="border2">
             <h2>Baby Web Developer</h2>
-            <h4>2020-2021 | Programming hero learner</h4>
+            <h4 class="color">2020-2021 | Programming hero learner</h4>
             <p>I have no job. So I decided to learn web developing in Preogramming hero .It is so sweet to learn
                 with fun.I love this site very much .Because I learn HTML,CSS , Java stript & so on. </p>
         </div>
     </section>
+    <footer>
+        <p>
+            @zabir hossain 2021, a programming hero initiative
+        </p>
+    </footer>
 </body>
 
 </html>
